# Study-Promgram

./: README.md  update.sh  weiyigeek.txt
C/: .gitignore  Hello_World.c  README.md  copy_file.c  liveDay.c  time.txt
C++/: rm.bat
C++/knowledge/: demo.cpp  demo1.cpp  demo3.c
C++/指针/: const_case.cpp  pointer.1.cpp  pointer.2.cpp  pointer.3.cpp  pointer.4.cpp  pointer.cpp  reinterpret_case.cpp
C/MakeFile/AutoMakefile/three/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  int_arithmetic.c
C/MakeFile/AutoMakefile/three/autom4te.cache/: output.1  requests  traces.0  traces.1
C/MakeFile/AutoMakefile/three/include/: div.h  sub.h  sum.h
C/MakeFile/AutoMakefile/three/src/: Makefile  Makefile.am  Makefile.in  div.c  mul.c  sub.c  sum.c
C/MakeFile/AutoMakefile/two/: Makefile.am  Makefile.in  configure  configure.ac  configure.scan  div.c  int_arithmetic.c  mul.c  mul.h  sub.c  sum.c
C/MakeFile/AutoMakefile/two/autom4te.cache/: output.1  requests  traces.0  traces.1
Go/: PUBG.py  go.mod  go.sum
HTML5/: .gitignore  LICENSE  README.md
JAVA/: Pufun.java  objectDog.java
JAVAWeb/: .gitignore
NetworkProjectStudy/: .gitignore  README.md
PHP/: index.php  parse.php  system.php
Python3/: .gitignore  demo3.10.py  demo3.12.py  demo3.14.py  demo3.15.py  demo3.16.py  demo3.2.py  demo3.5.py  demo3.7.py  homework.py
SEO/: Demo1.html  demo2.html
bat/: README.md
perl/: demo1.pl  demo2.pl  demo3.pl  demo4.pl  demo5.pl
操作系统us-II/: process-demo0.c  process-demo1.c  process-demo2.c  process-demo3.c  process-demo4.c
(+1989 files in other folders)
